# synthetic-data-creator

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
notebooks/: notebook.ipynb
src/: IO_utils.py  constants.py  data_generation.py  evaluator.py  openai_utils.py
